hphp/hack/test/typecheck/lsb_disallow_override_private.php.exp
File "lsb_disallow_override_private.php", line 8, characters 22-23:
Member $x may not override __LSB member of parent (Typing[4284])
File "lsb_disallow_override_private.php", line 4, characters 32-33:
This is being overridden
